--- a/src/Components/Nav.css
+++ b/src/Components/Nav.css
@@ -142,10 +142,17 @@ b{
 
 form{
     padding: 10px;
-    width: 500px;
+    
     background-color: #edd59e;
 }
 
+.info{
+    
+    padding: 10px;
+    
+    
+    background-color: #edd59e;
+}
 .footerspan{
     color: #57370d;
 }
