--- a/src/Components/Nav.css
+++ b/src/Components/Nav.css
@@ -2,6 +2,7 @@
     margin-top: 0px;
     padding-top: 0px;
 }
+
 body{
     margin: 0px;
     padding-top: 0px;
@@ -86,6 +87,7 @@ b{
 
 #card_img{
     width: 200px;
+    border-radius: 10%;
 }
 
 #devimage{
@@ -158,17 +160,26 @@ b{
 
 form{
     padding: 10px;
+    border-radius: 20px;
     
  
     background-color: #edd59e;
 }
 
 .info{
+    background: linear-gradient(135deg,rgba(255,255,255,0.1),rgba(255,255,255,0));
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+    border-radius: 20px;
+    border: 1px solid rgba(255,255,255,0.18);
+    box-shadow: 0 8px 32px 0 rgba(0,0,0,0.37);
+    padding: 10px;
     
     padding: 10px;
     
     
-    background-color: #edd59e;
+    background-color: #ffe998;
+    margin-bottom: 15px;
 }
 .footerspan{
     color: #57370d;
@@ -186,4 +197,49 @@ form{
 .allprojet{
     display: flex;
     justify-content: center;
+}
+
+.glass{
+    background: linear-gradient(135deg,rgba(255,255,255,0.1),rgba(255,255,255,0));
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+    border-radius: 20px;
+    border: 1px solid rgba(255,255,255,0.18);
+    box-shadow: 0 8px 32px 0 rgba(0,0,0,0.37);
+    padding: 10px;
+    
+}
+
+.glass1{
+    background: url(/public/myphotos/fsjest.jpeg);
+   
+    border-radius: 20px;
+    background-repeat: repeat;   
+    background-size: cover;
+    background-position: center;
+    
+}
+.imgismontic{
+    height: 185px;
+}
+
+.glass2{
+    background: url(/public/myphotos/ismontic.jpeg);
+
+    border-radius: 20px;
+    background-repeat: repeat;   
+    background-size: cover;
+    background-position: center;
+}
+
+.divv{
+    border-radius: 20px;
+    background-color: #ffe998;
+    background-size: 100%;
+    background-position: center;
+}
+
+.div-glass{
+    background-color: #ffe998;
+    border-radius: 20px;
 }
