--- a/src/Components/Nav.css
+++ b/src/Components/Nav.css
@@ -93,6 +93,7 @@ b{
 #devimage{
     display: flex;
     justify-content: center;
+    margin-bottom: 30px;
     
     
 }
@@ -113,7 +114,7 @@ b{
 
 #dev-dev-img{
     padding-bottom: 30px;
-    
+    margin-bottom: 30px;
     position: relative;
 }
 
